[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/kirifont/KiriFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/gameOverScreen.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 15.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="gameOverScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 576.0
custom_constants/margin_right = 64
custom_constants/margin_top = 128
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 64.0
margin_top = 128.0
margin_right = 960.0
margin_bottom = 512.0
custom_constants/separation = 64

[node name="title" type="Label" parent="PanelContainer/MarginContainer/rows"]
margin_right = 896.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME OVER"
align = 1

[node name="scoreLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/rows"]
margin_top = 129.0
margin_right = 896.0
margin_bottom = 129.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/rows"]
margin_top = 193.0
margin_right = 896.0
margin_bottom = 361.0

[node name="buttonRows" type="VBoxContainer" parent="PanelContainer/MarginContainer/rows/CenterContainer"]
margin_left = 339.0
margin_right = 557.0
margin_bottom = 168.0
custom_constants/separation = 32

[node name="restartButton" type="Button" parent="PanelContainer/MarginContainer/rows/CenterContainer/buttonRows"]
margin_right = 218.0
margin_bottom = 68.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" type="Button" parent="PanelContainer/MarginContainer/rows/CenterContainer/buttonRows"]
margin_top = 100.0
margin_right = 218.0
margin_bottom = 168.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelContainer/MarginContainer/rows/CenterContainer/buttonRows/restartButton" to="." method="_on_restartButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/rows/CenterContainer/buttonRows/quitButton" to="." method="_on_quitButton_pressed"]
